Implement secure 4-level RBAC across backend and frontend